[package]
name = "orion-exchange"
version = "0.1.1"
edition = "2024"
authors = ["wukong <sec-wukong@outlook.com>"]
description = "exchange data struct"
license = "MIT"
repository = "https://github.com/galaxy-sec/orion-exchange"
keywords = ["utilities"]
categories = ["rust-patterns"]


[dependencies]
serde = "~1.0"
serde_derive = "~1.0"
derive-getters = "~0.5"

[dev-dependencies]
toml = "~0.7"
serde_json = "~1.0"
serde_ini = "0.2.0"
serde_yml = "0.0.12"
